put the trader page into templating, locked post-creation to signed in users, fixed the navigation, and added a recent posts-per-trader listing.

--- a/index.yaml
+++ b/index.yaml
@@ -15,3 +15,9 @@ indexes:
   - name: postID
   - name: engage
     direction: desc
+
+- kind: Post
+  properties:
+  - name: traderID
+  - name: engage
+    direction: desc
