The email functonality is now enabled in both ddirections, or rather, all emails to the app are discarded and I'm notified via email, but the functionality is there.

--- a/app.yaml
+++ b/app.yaml
@@ -21,7 +21,7 @@ handlers:
   static_dir: www/img
 
 - url: /_ah/mail/.+
-  script: bitlist.mail
+  script: bitlist.email_handler
   login: admin
 
 - url: /.*
