updated a bunch of the template pages to at least give them the content that they require.  I just realised I haven't included a way to edit or delete these posts yet, so there's that, but otherwise it's just more layout and the basic site will be complete.

--- a/index.yaml
+++ b/index.yaml
@@ -12,6 +12,12 @@ indexes:
 
 - kind: Post
   properties:
+  - name: contact
+  - name: engage
+    direction: desc
+
+- kind: Post
+  properties:
   - name: postID
   - name: engage
     direction: desc
