fixed GAE's ability to find my favicon, changed the layout of the trader/posts page, the main page (woo categories) and the post summaries all over (now in small_post.html for the most part).  I have started to implement the category section (for browsing the database) but thought I'd throw a commit in before I really started to screw around with things.

--- a/app.yaml
+++ b/app.yaml
@@ -20,6 +20,10 @@ handlers:
 - url: /img
   static_dir: www/img
 
+- url: /favicon.ico
+  static_files: www/favicon.ico
+  upload: www/favicon.ico
+
 - url: /_ah/mail/.+
   script: bitlist.email_handler
   login: admin
