added category and subcategory pages at /category?category=XXX&subcategory=XXX, there are no links set up for it yet, but it works.

--- a/index.yaml
+++ b/index.yaml
@@ -18,6 +18,13 @@ indexes:
 
 - kind: Post
   properties:
+  - name: category
+  - name: subcategory
+  - name: engage
+    direction: desc
+
+- kind: Post
+  properties:
   - name: contact
   - name: engage
     direction: desc
