I got the subcategories working nicely now, the django regroup function is really nice.  However, I sort of messed up the trader/posts page in doing so, really I just need to give it its own template instead of recycling.  There are a lot of little breadcrumb type things I could implement, but I'm going to leave it for now.

--- a/index.yaml
+++ b/index.yaml
@@ -19,7 +19,29 @@ indexes:
 - kind: Post
   properties:
   - name: category
+  - name: engage
+    direction: desc
   - name: subcategory
+    direction: desc
+
+- kind: Post
+  properties:
+  - name: category
+  - name: subcategory
+  - name: engage
+    direction: desc
+
+- kind: Post
+  properties:
+  - name: category
+  - name: subcategory
+    direction: desc
+
+- kind: Post
+  properties:
+  - name: category
+  - name: subcategory
+    direction: desc
   - name: engage
     direction: desc
 
@@ -38,5 +60,12 @@ indexes:
 - kind: Post
   properties:
   - name: traderID
+  - name: engage
+    direction: desc
+
+- kind: Post
+  properties:
+  - name: traderID
+  - name: subcategory
   - name: engage
     direction: desc
