I added a bunch of comments, moved a few minor things to the settings.py file, and a few minor tweaks to things.

--- a/index.yaml
+++ b/index.yaml
@@ -53,7 +53,31 @@ indexes:
 
 - kind: Post
   properties:
+  - name: engage
+    direction: desc
+  - name: subcategory
+
+- kind: Post
+  properties:
+  - name: engage
+    direction: desc
+  - name: subcategory
+    direction: desc
+
+- kind: Post
+  properties:
   - name: postID
+  - name: engage
+    direction: desc
+
+- kind: Post
+  properties:
+  - name: subcategory
+  - name: category
+
+- kind: Post
+  properties:
+  - name: subcategory
   - name: engage
     direction: desc
 
