--- a/index.yaml
+++ b/index.yaml
@@ -28,3 +28,9 @@ indexes:
   - name: traderID
   - name: engage
     direction: desc
+
+- kind: SavedQuery
+  properties:
+  - name: userID
+  - name: search_date
+    direction: desc
