added a button and property allowing for seaches to become alerts, and made a few minor changes to layout and searchresults.  I also added a new template page 'trader_search.html' to deal with the saved searches / alerts.  Maybe not exactly necessary, but I thought it would help clean up 'trader.html' somewhat.

--- a/index.yaml
+++ b/index.yaml
@@ -32,5 +32,13 @@ indexes:
 - kind: SavedQuery
   properties:
   - name: userID
+  - name: is_alert
+    direction: desc
+  - name: save_date
+    direction: desc
+
+- kind: SavedQuery
+  properties:
+  - name: userID
   - name: search_date
     direction: desc
