Completed the section that runs text searches over the SavedQueries that are saved as Alerts when new posts are made.  I still have to set up the actual emailing functionality, but everything up to that point works - line 219 in bitlist.py is a logging.info line that indicates that emails were sent out, which is what I ahve been using to test the system up until now and it appears to function correctly.

--- a/index.yaml
+++ b/index.yaml
@@ -31,6 +31,14 @@ indexes:
 
 - kind: SavedQuery
   properties:
+  - name: category
+  - name: is_alert
+  - name: subcategory
+  - name: save_date
+    direction: desc
+
+- kind: SavedQuery
+  properties:
   - name: userID
   - name: is_alert
     direction: desc
